webjars로 의존성 넣고 제이쿼리 경로 설정하고 사용해보기

--- a/inflearn/whiteship/web-mvc/src/main/resources/static/hello.html
+++ b/inflearn/whiteship/web-mvc/src/main/resources/static/hello.html
@@ -7,4 +7,10 @@
 <body>
 Hello Super Developer~!
 </body>
+<script src="/webjars/jquery/2.1.4/jquery.js"></script>
+<script>
+    $(function () {
+        alert("HAHA");
+    });
+</script>
 </html>
