webjars-locator-core 의존성을 넣으면 /webjars/.. 경로에 버전 명시를 생략가능하다.

--- a/inflearn/whiteship/web-mvc/src/main/resources/static/hello.html
+++ b/inflearn/whiteship/web-mvc/src/main/resources/static/hello.html
@@ -7,10 +7,10 @@
 <body>
 Hello Super Developer~!
 </body>
-<script src="/webjars/jquery/2.1.4/jquery.js"></script>
+<script src="/webjars/jquery/jquery.js"></script>
 <script>
     $(function () {
-        alert("HAHA");
+        alert("HAHAHA");
     });
 </script>
 </html>
